fix : fix the alignment issues in hero section

--- a/blunt_umbrella/src/app/globals.css
+++ b/blunt_umbrella/src/app/globals.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kids&display=swap");
+
 
 @import "tailwindcss";
 
@@ -42,5 +44,23 @@
 ::-webkit-scrollbar-track {
   background: transparent;
 }
+
+@font-face {
+  font-family: "Blunt";
+  src: url("/fonts/Blunt.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Kids";
+  src: url("/fonts/Kids.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 
 
